src/test/ui/auto-traits/typeck-auto-trait-no-supertraits-2.stderr
error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:4:17
   |
LL | auto trait Magic : Sized where Option<Self> : Magic {}
   |            -----^^^^^^^^ help: remove the super traits or lifetime bounds
   |            |
   |            auto trait cannot have super traits or lifetime bounds

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:4:26
   |
LL | auto trait Magic : Sized where Option<Self> : Magic {}
   |            -----         ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove the super traits or lifetime bounds
   |            |
   |            auto trait cannot have super traits or lifetime bounds

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0568`.
